WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145515
HandlerInfo::initialize() should not assume that CodeLocationLabel is available.
https://bugs.webkit.org/show_bug.cgi?id=145515
Summary
HandlerInfo::initialize() should not assume that CodeLocationLabel is available.
Mark Lam
Reported
2015-06-01 09:21:48 PDT
r185022
broke the build for !ENABLE(ASSEMBLER) builds. This fixes it.
Attachments
the patch.
(2.90 KB, patch)
2015-06-01 09:26 PDT
,
Mark Lam
mark.lam
: review-
Details
Formatted Diff
Diff
patch 2: fixed careless copy-paste errors.
(2.87 KB, patch)
2015-06-01 09:33 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2015-06-01 09:26:19 PDT
Created
attachment 254002
[details]
the patch.
Mark Lam
Comment 2
2015-06-01 09:33:59 PDT
Created
attachment 254004
[details]
patch 2: fixed careless copy-paste errors. Sadly, the simplest patches tend to be more error prone. Should be fixed now.
WebKit Commit Bot
Comment 3
2015-06-01 10:59:04 PDT
Comment on
attachment 254004
[details]
patch 2: fixed careless copy-paste errors. Clearing flags on attachment: 254004 Committed
r185063
: <
http://trac.webkit.org/changeset/185063
>
WebKit Commit Bot
Comment 4
2015-06-01 10:59:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug