HandlerInfo::initialize() should not assume that CodeLocationLabel is available. https://bugs.webkit.org/show_bug.cgi?id=145515

Reviewed by Csaba Osztrogonác.

CodeLocationLabel is only defined for ENABLE(ASSEMBLER) builds.  r185022's
attempt at simplifying code to increase readability failed to take this into
account.  This patch fixes it.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::CodeBlock):
* bytecode/HandlerInfo.h:
(JSC::HandlerInfo::initialize):


Canonical link: https://commits.webkit.org/163552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185063 268f45cc-cd09-0410-ab3c-d52691b4dbfc